--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,8 @@ $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 
-$spacing-unit:     30px;
+$spacing-unit:          30px;
+$spacing-micro-unit:    6px;
 
 $color-brand:       #62665f; // military green color
 $color-text:        #bbb;
